split web from print version